tests/fixtures/readmes/invalid/bad_distribution.readme
Short:        Bad distribution value
Uploader:     test@example.com (T. Test)
Type:         util/misc
Architecture: m68k-amigaos
Distribution: Public

Distribution only accepts NoCD or Aminet.
